--- a/tarot.css
+++ b/tarot.css
@@ -5,7 +5,6 @@ body {
     align-items: center;
     flex-direction: column;
     padding: 20px;
-    height: 100vh;
     margin: 0;
     background-color: #282c35;
     font-family: Arial, sans-serif;
@@ -74,4 +73,110 @@ body {
     margin: 5px 0;
     border-radius: 5px;
     text-align: center;
+}
+.cuerpo2 {
+    background-color: #3e4451;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    width: 90%;
+    max-width: 400px;
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dado{
+    background-color: #606a77;
+    color: white;
+    font-size: 50px;
+    width: 90px;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cuerpo3 {
+    background-color: #3e4451;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    width: 90%;
+    max-width: 400px;
+    min-height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+}
+
+.dice {
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border: 3px solid black;
+    border-radius: 10px;
+    position: relative;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  .dot {
+    width: 20px;
+    height: 20px;
+    background-color: black;
+    border-radius: 40%;
+    position: absolute;
+    opacity: 0; /* Puntos ocultos inicialmente */
+  }
+  .center{
+    opacity: 1;
+  }
+  
+  .center { top: 50%; left: 50%; transform: translate(-50%, -50%); }
+  .top-left { top: 10px; left: 10px; }
+  .top-center { top: 10px; left: 50%; transform: translateX(-50%); }
+  .top-right { top: 10px; right: 10px; }
+  .bottom-left { bottom: 10px; left: 10px; }
+  .bottom-center { bottom: 10px; left: 50%; transform: translateX(-50%); }
+  .bottom-right { bottom: 10px; right: 10px; }
+  
+
+  .container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+.coin {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 1s ease-in-out;
+}
+.side {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background-color: #ccc; /* Color de fondo por defecto */
+    border: 5px solid #7e7c7a; /* Borde color bronce para simular el borde de una moneda */
+    border-radius: 50%; /* Hace que el borde sea circular */
+}
+.heads {
+    background: url('cara.png') no-repeat center/cover;
+    border-radius: 100%;
+    background-color: white;
+}
+.tails {
+    background: url('cruz.png') no-repeat center/cover;
+    transform: rotateY(180deg);
+    border-radius: 100%;
+    background-color: white;
 }
