--- a/tarot.css
+++ b/tarot.css
@@ -30,7 +30,7 @@ body {
     gap: 10px;
 }
 
-.accion, .reiniciar {
+.accion {
     background-color: #ffcc00;
     color: #282c35;
     border: none;
@@ -42,13 +42,27 @@ body {
     transition: background-color 0.3s;
 }
 
-.accion:hover, .reiniciar:hover {
+.accion:hover, .eliminar:hover {
     background-color: #e6b800;
 }
 
 /* Estilos del resultado */
-.resultado {
+.resultado{
     background-color: #505865;
+    padding: 15px;
+    border-radius: 5px;
+    min-height: 50px;
+    color: white;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.lista{
+    background-color: #505865;
+    margin-top: 20px;
     padding: 15px;
     border-radius: 5px;
     min-height: 50px;
@@ -66,6 +80,7 @@ body {
     width: 100%;
 }
 
+
 .resultado li {
     background-color: #606a77;
     list-style: none;
@@ -74,6 +89,36 @@ body {
     border-radius: 5px;
     text-align: center;
 }
+
+.content{
+    display: flex;
+    flex-direction: row;
+   align-items: center;
+}
+.content li{
+    background-color: #606a77;
+    list-style: none;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+    text-align: center; 
+    width: 100%;
+}
+
+.eliminar{
+    background-color: #ffcc00;
+    color: #282c35;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    width: 10%;
+    height: 40px;
+    margin-left: 10px;
+}
+
 .cuerpo2 {
     background-color: #3e4451;
     padding: 20px;
