--- a/tarot.css
+++ b/tarot.css
@@ -42,12 +42,13 @@ body {
     transition: background-color 0.3s;
 }
 
-.accion:hover, .eliminar:hover {
+.accion:hover,
+.eliminar:hover {
     background-color: #e6b800;
 }
 
 /* Estilos del resultado */
-.resultado{
+.resultado {
     background-color: #505865;
     padding: 15px;
     border-radius: 5px;
@@ -60,7 +61,7 @@ body {
     overflow-y: auto;
 }
 
-.lista{
+.lista {
     background-color: #505865;
     margin-top: 20px;
     padding: 15px;
@@ -90,22 +91,23 @@ body {
     text-align: center;
 }
 
-.content{
+.content {
     display: flex;
     flex-direction: row;
-   align-items: center;
+    align-items: center;
 }
-.content li{
+
+.content li {
     background-color: #606a77;
     list-style: none;
     padding: 10px;
     margin: 5px 0;
     border-radius: 5px;
-    text-align: center; 
+    text-align: center;
     width: 100%;
 }
 
-.eliminar{
+.eliminar {
     background-color: #ffcc00;
     color: #282c35;
     border: none;
@@ -133,7 +135,7 @@ body {
     justify-content: center;
 }
 
-.dado{
+.dado {
     background-color: #606a77;
     color: white;
     font-size: 50px;
@@ -156,7 +158,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 80px;
 }
 
 .dice {
@@ -170,34 +171,67 @@ body {
     place-items: center;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
-  }
-  
-  .dot {
+}
+
+.dot {
     width: 20px;
     height: 20px;
     background-color: black;
     border-radius: 40%;
     position: absolute;
-    opacity: 0; /* Puntos ocultos inicialmente */
-  }
-  .center{
-    opacity: 1;
-  }
-  
-  .center { top: 50%; left: 50%; transform: translate(-50%, -50%); }
-  .top-left { top: 10px; left: 10px; }
-  .top-center { top: 10px; left: 50%; transform: translateX(-50%); }
-  .top-right { top: 10px; right: 10px; }
-  .bottom-left { bottom: 10px; left: 10px; }
-  .bottom-center { bottom: 10px; left: 50%; transform: translateX(-50%); }
-  .bottom-right { bottom: 10px; right: 10px; }
-  
+    opacity: 0;
+    /* Puntos ocultos inicialmente */
+}
 
-  .container {
+.center {
+    opacity: 1;
+}
+
+.center {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.top-left {
+    top: 10px;
+    left: 10px;
+}
+
+.top-center {
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.top-right {
+    top: 10px;
+    right: 10px;
+}
+
+.bottom-left {
+    bottom: 10px;
+    left: 10px;
+}
+
+.bottom-center {
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bottom-right {
+    bottom: 10px;
+    right: 10px;
+}
+
+
+.container {
     position: relative;
     width: 150px;
     height: 150px;
 }
+
 .coin {
     width: 100%;
     height: 100%;
@@ -205,23 +239,136 @@ body {
     transform-style: preserve-3d;
     transition: transform 1s ease-in-out;
 }
+
 .side {
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-color: #ccc; /* Color de fondo por defecto */
-    border: 5px solid #7e7c7a; /* Borde color bronce para simular el borde de una moneda */
-    border-radius: 50%; /* Hace que el borde sea circular */
+    background-color: #ccc;
+    /* Color de fondo por defecto */
+    border: 5px solid #7e7c7a;
+    /* Borde color bronce para simular el borde de una moneda */
+    border-radius: 50%;
+    /* Hace que el borde sea circular */
 }
+
 .heads {
     background: url('cara.png') no-repeat center/cover;
     border-radius: 100%;
     background-color: white;
 }
+
 .tails {
     background: url('cruz.png') no-repeat center/cover;
     transform: rotateY(180deg);
     border-radius: 100%;
     background-color: white;
+}
+
+
+
+.cuerpo4 {
+    background-color: #3e4451;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    width: 90%;
+    max-width: 400px;
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 80px;
+}
+
+
+
+.sumar {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Espacio entre filas */
+    width: 300px; /* Ajusta el ancho según necesites */
+}
+
+.fila {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.fila input{
+    border: none; /* Quitar bordes */
+    outline: none; /* Evitar borde azul al hacer clic */
+    width: 180px; /* Ajusta el ancho según necesites */
+    height: 20px; /* Altura del input */
+    border-radius: 10px; /* Bordes redondeados */
+    cursor: pointer; /* Hace que parezca un botón */
+}
+
+.fila p {
+    margin: 0;
+    color: white;
+    font-weight: bold;
+}
+
+#anadir {
+    background-color: #ffcc00;
+    color: #282c35;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    width: 30%;
+    height: 30px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+.clasificacion {
+    min-width: 300px;
+    margin-top: 30px;
+}
+
+.jugador {
+    display: flex;
+    flex-direction: row;
+    color: white;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.nombre{
+    width: 40%;
+    text-align: left;
+}
+.puntos{
+    width: 30%;
+    text-align: left;
+}
+
+.jugador input {
+    border: none; /* Quitar bordes */
+    outline: none; /* Evitar borde azul al hacer clic */
+    width: 50px; /* Ajusta el ancho según necesites */
+    height: 20px; /* Altura del input */
+    border-radius: 10px; /* Bordes redondeados */
+    cursor: pointer; /* Hace que parezca un botón */
+    margin-right: 10px;
+}
+
+.jugador button {
+    background-color: #ffcc00;
+    border: none; /* Quitar bordes */
+    outline: none; /* Evitar borde azul al hacer clic */
+    width: 40px; /* Ajusta el ancho según necesites */
+    height: auto; /* Altura del input */
+    border-radius: 10px; /* Bordes redondeados */
+    cursor: pointer; /* Hace que parezca un botón */
 }
