--- a/css/donEmilio.css
+++ b/css/donEmilio.css
@@ -120,18 +120,32 @@ body {
     margin-left: 10px;
 }
 
-.salir{
+/* Estilos básicos para el botón */
+.salir {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
     background-color: #ffcc00;
     color: #282c35;
     border: none;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
     border-radius: 5px;
-    transition: background-color 0.3s;
-    width: 100px;
-    height: 60px;
-    display: block;
-    margin: 0 auto;
-    margin-top: 10px;
-}
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+  
+  /* Estilos responsive */
+  @media (max-width: 768px) {
+    .salir {
+      padding: 8px 16px;
+      font-size: 14px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .salir {
+      padding: 6px 12px;
+      font-size: 12px;
+    }
+  }
