--- a/css/ruleta.css
+++ b/css/ruleta.css
@@ -11,7 +11,7 @@ body {
 }
 
 /* Estilos del contenedor principal */
-.cuerpo {
+.cuerpo1 {
     background-color: #3e4451;
     padding: 20px;
     border-radius: 10px;
@@ -23,14 +23,14 @@ body {
 }
 
 /* Estilos del botón */
-.boton {
+.boton1 {
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
     gap: 10px;
 }
 
-.accion {
+.accion1 {
     background-color: #ffcc00;
     color: #282c35;
     border: none;
@@ -42,13 +42,13 @@ body {
     transition: background-color 0.3s;
 }
 
-.accion:hover,
-.eliminar:hover {
+.accion1:hover,
+.eliminar1:hover {
     background-color: #e6b800;
 }
 
 /* Estilos del resultado */
-.resultado {
+.resultado1 {
     background-color: #505865;
     padding: 15px;
     border-radius: 5px;
@@ -61,7 +61,7 @@ body {
     overflow-y: auto;
 }
 
-.lista {
+.lista1 {
     background-color: #505865;
     margin-top: 20px;
     padding: 15px;
@@ -75,14 +75,14 @@ body {
     overflow-y: auto;
 }
 
-.resultado ul {
+.resultado1 ul {
     list-style: none;
     padding: 0;
     width: 100%;
 }
 
 
-.resultado li {
+.resultado1 li {
     background-color: #606a77;
     list-style: none;
     padding: 10px;
@@ -91,13 +91,13 @@ body {
     text-align: center;
 }
 
-.content {
+.content1 {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.content li {
+.content1 li {
     background-color: #606a77;
     list-style: none;
     padding: 10px;
@@ -107,7 +107,7 @@ body {
     width: 100%;
 }
 
-.eliminar {
+.eliminar1 {
     background-color: #ffcc00;
     color: #282c35;
     border: none;
@@ -120,51 +120,3 @@ body {
     height: 40px;
     margin-left: 10px;
 }
-
-
-.jugar{
-    background-color: #ffcc00;
-    color: #282c35;
-    border: none;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    width: 100px;
-    height: 50px;
-    display: block;
-    margin: 0 auto;
-    margin-top: 10px;
-    margin-bottom: 30px;
-}
-
-/* Estilos básicos para el botón */
-.salir {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    padding: 10px 20px;
-    background-color: #ffcc00;
-    color: #282c35;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-  
-  /* Estilos responsive */
-  @media (max-width: 768px) {
-    .salir {
-      padding: 8px 16px;
-      font-size: 14px;
-    }
-  }
-  
-  @media (max-width: 480px) {
-    .salir {
-      padding: 6px 12px;
-      font-size: 12px;
-    }
-  }
